# bengaluru-tree-census-analysis

./: README.md  corp_areas.json  corp_bounds.geojson  corp_bounds.kml  pyproject.toml  s01_process_raw_data.py  s02_load_datasets.py  s03_density.py  s03_draw_maps.py  s04_tree_frequency.py
results/: blr_corpwise_density.md  blr_species_frequency.md  central_species_frequency.md  east_species_frequency.md  north_species_frequency.md  south_species_frequency.md  west_species_frequency.md
