[project]
name = "bengaluru-tree-census-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "h3>=4.3.1",
    "kaleido>=1.1.0",
    "kml2geojson>=5.1.0",
    "plotly[express]>=6.3.1",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "tabulate>=0.9.0",
    "xmltodict>=1.0.2",
]
